# cyberfingerprint

./: README.md  pyproject.toml  requirements.txt
app/core/: settings.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/components/: Navbar.vue
