[tool.poetry]
name = "Cyber Fingerprint"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiodns = "^3.0.0"
aiofiles = "^0.8.0"
asyncwhois = "^1.0.0"
beautifulsoup4 = "^4.10.0"
d8s-urls = "^0.6.0"
fastapi = "^0.78.0"
fastapi-utils = "^0.2.1"
gunicorn = "^20.1.0"
ioc-finder = "^7.0.0"
loguru = "^0.6.0"
mmh3 = "^3.0.0"
pyOpenSSL = "^22.0.0"
requests = {extras = ["security"], version = "^2.26.0"}
tldextract = "^3.1.2"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
whois-parser = "^0.1.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.7"
black = "^21.9b0"
coveralls = "^3.2.0"
flake8 = "^4.0.0"
isort = "^5.9.3"
mypy = "^0.960"
pre-commit = "^2.15.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.10.1"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.25.1"
vcrpy = "^4.1.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
